--- a/src/components/CartSummary/index.css
+++ b/src/components/CartSummary/index.css
@@ -32,4 +32,86 @@ order-quantity {
   font-family: 'Roboto';
   border-radius: 6px;
   border-width: 0px;
+  cursor: pointer;
+  outline: none;
+}
+
+.confirm-order-container {
+  height: 50vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #000000;
+  border-radius: 10px;
+}
+
+.popup-container {
+  background-color: #000000;
+}
+
+.payment-container {
+  height: 3vh;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.payment-label {
+  color: #ffffff;
+  font-size: 20px;
+  font-family: 'Roboto';
+  font-weight: 400;
+}
+
+.order-summary-container {
+  height: 5vh;
+  width: 100%;
+}
+
+.confirm-order-text {
+  color: #ffffff;
+  font-size: 22px;
+  font-family: 'Roboto';
+}
+
+.order-highlight {
+  color: #b3052a;
+}
+
+.confirm-button {
+  height: 18px;
+  width: 36px;
+  background-color: #96b9f1;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: 'Roboto';
+  border-radius: 3px;
+  border-width: 0px;
+  cursor: pointer;
+  outline: none;
+}
+
+.close-button {
+  background-color: transparent;
+  border-width: 0px;
+  align-self: flex-end;
+  cursor: pointer;
+  outline: none;
+}
+
+.close-icon {
+  color: #ffffff;
+  height: 3vh;
+  width: 2vw;
+}
+
+.highlight {
+  background-color: #02307a;
+}
+
+.confirm-text {
+  color: #6adf47;
+  font-size: 18px;
+  font-family: 'Roboto';
 }
