--- a/src/components/CartSummary/index.css
+++ b/src/components/CartSummary/index.css
@@ -37,28 +37,24 @@ order-quantity {
 }
 
 .confirm-order-container {
-  height: 50vh;
-  width: 50vw;
+  height: 60vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
   background-color: #000000;
   border-radius: 10px;
 }
 
-.popup-container {
-  background-color: #000000;
-}
-
 .payment-container {
-  height: 3vh;
-  width: 100%;
+  height: 5vh;
+  width: 40vw;
+  background-color: #eef1e9;
   border-radius: 5px;
 }
 
 .payment-label {
-  color: #ffffff;
+  color: #6d6ff1;
   font-size: 20px;
   font-family: 'Roboto';
   font-weight: 400;
@@ -66,7 +62,7 @@ order-quantity {
 
 .order-summary-container {
   height: 5vh;
-  width: 100%;
+  width: 40vw;
 }
 
 .confirm-order-text {
@@ -80,8 +76,8 @@ order-quantity {
 }
 
 .confirm-button {
-  height: 18px;
-  width: 36px;
+  height: 36px;
+  width: 130px;
   background-color: #96b9f1;
   color: #ffffff;
   font-size: 16px;
@@ -108,6 +104,12 @@ order-quantity {
 
 .highlight {
   background-color: #02307a;
+}
+
+.confirm-text {
+  color: #6adf47;
+  font-size: 18px;
+  font-family: 'Roboto';
 }
 
 .confirm-text {
